--- a/Slak/19.md
+++ b/Slak/19.md
@@ -1,9 +1,9 @@
 
 # Chapter XIX 
 
-## ORIGEN AND CELSUS 
+## Origen and Celsus 
 
-### Celsus' charges of magic against Christianity.
+### Celsus charges of magic against Christianity.
 
 In the celebrated work of Origen _Against Celsus_, [^436:1] written in the first half of the third century, the subject of magic is often touched upon, largely because Celsus in his _True Discourse_ had so frequently brought charges of magic against Jesus, His Christian followers, and the Jewish people from whom they had sprung. Celsus had called Jesus 
 
@@ -56,24 +56,24 @@ He stated that the Jews traced back their origin to "the first generation of lyi
 
 Celsus further characterized the Jews as "blinded by some crooked sorcery, or dreaming dreams through the influence of shadowy specters," [^437:11] and as 
 
- [^437:11]: V, 6.
+ [^437:11]: V,6.
 
 > "induced to bow down to the angels in heaven by the incantations employed by jugglery and sorcery, in consequence of which certain phantoms appear in obedience to the spells employed by the magicians." [^438:1]  
 Celsus, also, in describing the many self-styled prophets, Redeemers, and Sons of God in the Phoenicia and Palestine of his own time, states that they make use of 
 
- [^438:1]: V, 9.
+ [^438:1]: V,9.
 
 "strange, fanatical, and quite unintelligible words, of which no rational person can find any meaning," [^438:2] 
 
- [^438:2]: V, 9.
+ [^438:2]: V,9.
 
 and that those prophets whom he himself had heard had afterwards confessed to him that these words "really meant nothing." [^438:3] 
 
- [^438:3]: VII, 11.
+ [^438:3]: VII,11.
 
 Yet even the Christians, Celsus complains, who condemn all other oracles, regard as marvelous and accept unquestioningly "those sayings which were uttered or were not uttered in Judea after the manner of that country, as indeed they are still delivered among the peoples of Phoenicia and Palestine." [^438:4] 
 
- [^438:4]: VII, 3.
+ [^438:4]: VII,3.
 
 ### Various recriminations of magic.
 
@@ -87,69 +87,69 @@ while the Egyptians charge Moses and the Hebrews with the practice of sorcery du
 
 Origen, on the other hand, speaks of "the magical arts and rites of the Egyptians" and holds that it was by divine aid and not by superior magic that Moses prevailed over Pharaoh's magicians. [^438:7] 
 
- [^438:7]: III, 46; IV, 51.
+ [^438:7]: III,46; IV,51.
 
 Celsus for his part had accused Jesus during His residence in Egypt of "having there acquired some miraculous powers, on which the Egyptians greatly pride themselves." [^438:8] 
 
- [^438:8]: I, 28.
+ [^438:8]: I,28.
 
 ### Origen's distinction between miracles and magic.
 
 Origen repudiates the charges of magic made against Christ and His followers as slanders. He asserts that Christianity on the contrary strictly forbids the practice of magic arts, [^438:9] 
 
- [^438:9]: I, 38.
+ [^438:9]: I,38.
 
 and that these lost much of their force at the birth of Christ. [^438:10] 
 
- [^438:10]: I, 60.
+ [^438:10]: I,60.
 
 He contends that no magician would teach such noble doctrines as those of Christianity. [^438:11] Origen goes so far as to deny that even the 
 
- [^438:11]: I, 38.
+ [^438:11]: I,38.
 
 > "false Christs and false prophets," who "shall show great signs and wonders," will be sorcerers, and he states that no sorcerer has ever claimed to be Christ [^439:1] 
 
- [^439:1]: II, 49.
+ [^439:1]: II,49.
 
 an amazing assertion in view of his own allusions to Simon Magus. Works of magic and miracles, Origen affirms, are no more alike than are a wolf and a dog or a wood-pigeon and a dove. They are, however, so closely related that if one admits the reality of magic he must also believe in divine miracles, just as the existence of sophistry proves that there is such a thing as sound argument and an art of dialectic. [^439:2] 
 
- [^439:2]: II, 51.
+ [^439:2]: II,51.
 
 Moreover, in one passage Origen admits that "there would indeed be a resemblance" between miracles and magic, "if Jesus, like the dealers in magic arts, had performed His works only for show; but now there is not a single juggler who, by means of his proceedings, invites his spectators to reform their manners, or trains those to the fear of God who are amazed at what they see, nor who tries to persuade them so to live as men who are to be justified by God." [^439:3] On the contrary, Origen asserts that the magicians' "own lives are full of the grossest and most notorious sins." 
 
- [^439:3]: I, 58.
+ [^439:3]: I,58.
 
 ### Origen frees Jews as well as Christians from the charge of magic.
 
 Since it is one of Origen's chief concerns to uphold Hebrew prophecy as a proof of Christ's divinity, although Celsus subjects the argument from prophecy to ridicule; to defend the Old Testament against Celsus attacks as an inspired record of greater antiquity than Greek philosophy, history, and literature, which he asserts have stolen truths from it; and to maintain that "there is no discrepancy between the God of the Gospel and the God of the Law": [^439:4]  
 
- [^439:4]: VII, 25.
+ [^439:4]: VII,25.
 
 since this is so, it is incumbent upon him to rebut also the accusations of magic laid by Celsus at the door of the Jews. Origen therefore asserts that the Jews "despised all kinds of divination as that which bewitches men to no purpose," and cites the prohibition of Leviticus (xix, 31) against wizards and familiar spirits. [^439:5] 
 
- [^439:5]: V, 42.
+ [^439:5]: V,42.
 
 ### Celsus' skeptical description of magic.
 
 The _Reply to Celsus_ is of especial interest to us because it presents as it were in parallel columns for our inspection the classical and the Christian conceptions of and attitudes towards magic. Before proceeding, therefore, to inquire how far justified Origen seems to be in thus acquitting, or Celsus, on the other hand, in condemning Christians and Jews on the charge of magic, it is essential to note what magic means for either author. Both evidently regard it as a term of reproach and as usually evil in character. [^440:1] 
 
- [^440:1]: I, 68.
+ [^440:1]: I,68.
 
 Celsus lists as feats of magic the expelling of demons and diseases from men, or the sudden production of tables, dishes, and food as for an expensive banquet, or of animals who move about as if alive. Celsus, however, seems to speak with a sneer of "their most venerated arts" and describes the banquet dishes as "dainties having no real existence" and the animals as "not really living but having only the appearance of life." Therefore the ensuing comment of Origen seems unusually stupid or unfair, when he tries to convict Celsus of inconsistency on the ground that "by these expressions he allows as it were the existence of magic," whereas Origen hints that it was he "who wrote several books against it." "These expressions" are, on the contrary, precisely those which a man who had attacked magic as deceptive would use. Celsus further stated that an Egyptian named Dionysius had told him that magic arts had power "only over the uneducated and men of corrupt morals," but had no effect upon philosophers, "because they were careful to observe a healthy manner of life." [^440:2] 
 
- [^440:2]: VI, 41.
+ [^440:2]: VI,41.
 
 > Celsus himself observed that "those who in market-places perform most disreputable tricks and collect crowds around them . . . would never approach an assembly of wise men." [^440:3] 
 
- [^440:3]: III, 52
+ [^440:3]: III,52
 
 It was at the request of a Celsus, moreover, that the second century satirist Lucian wrote his _Alexander_ or _Pseudomantis_ [^440:4] in which some of the tricks of a magician-impostor and oracle-monger are exposed, and in which allusion is made to the "excellent treatises against the magicians" written by Celsus himself. 
 
- [^440:4]: See Cap. 21.
+ [^440:4]: See Cap.21.
 
 It seems reasonably certain that the Celsus of Lucian and the Celsus of Origen are identical, as there are no chronological difficulties and the same point of view is ascribed in either case to Celsus, whom both Lucian and Origen regard as an Epicurean or at least in sympathy with the Epicureans. Galen, in a treatise in which he lists his own writings, mentions an "Epistle to Celsus the Epicurean." [^441:1] This, too, might be the same man. 
 
- [^441:1]: Kühn, XIX, 48. (de libri propriis ). Μετροδῆρου ἐπιστολὴ πρὸς Κελσον ᾿Επικούρειον.
+ [^441:1]: Kühn, XIX,48. (de libri propriis ). Μετροδῆρου ἐπιστολὴ πρὸς Κελσον ᾿Επικούρειον.
 
 ### Celsus suggests a connection between magic and occult virtues in nature.
 
@@ -157,32 +157,32 @@ Another passage in which Celsus, according to Origen at least, "mixed up togethe
 
 > "What need to number up all those who have taught methods of purification, or expiatory hymns, or spells for averting evil, or images, or resemblances of demons, or the various sorts of antidotes against poison in clothing, or in numbers, or stones, or plants, or roots, or generally in all kinds of things?" [^441:2] 
 
- [^441:2]: VI, 30.
+ [^441:2]: VI,30.
 
 In another passage Celsus again closely connected sorcery with the knowledge of occult virtues in nature, arguing that men need not pride themselves upon their power of sorcery when serpents and eagles know of antidotes to poisons and amulets and the virtues of certain stones which help to preserve their young." [^441:3]  
-Origen objects that it is not customary to use the word sorcery (γοητεία) for such things, and suggests that Celsus is such an "Epicurean," i. e., so sceptical, that he wishes to discredit all those other beliefs and practices "as resting only on the professions of sorcerers." But we have already had proof enough in other chapters that Celsus was not unjustified in connecting the occult virtue of natural objects with magic, if not with sorcery. 
+Origen objects that it is not customary to use the word sorcery (γοητεία) for such things, and suggests that Celsus is such an "Epicurean," i.e., so sceptical, that he wishes to discredit all those other beliefs and practices "as resting only on the professions of sorcerers." But we have already had proof enough in other chapters that Celsus was not unjustified in connecting the occult virtue of natural objects with magic, if not with sorcery. 
 
- [^441:3]: IV. 86.
+ [^441:3]: IV.86.
 
 ### Celsus on magicians and demons.
 
 Celsus, as we shall see, believed in the existence of demons whom, however, he did not regard as necessarily evil spirits, and whom he probably regarded as above any connection with magic. Origen once says that if Celsus "had been acquainted with the nature of demons" and their operations in the magic arts, he would not have blamed Christians for not worshiping them. [^442:1] The natural inference from this statement is that Celsus did not associate demons with magic. Origen, however, depicts him as 
 
- [^442:1]: VII, 67.
+ [^442:1]: VII,67.
 
 > "speaking of those who employ the arts of magic and sorcery and who invoke the barbarous names of demons," [^442:2] 
 
- [^442:2]: VI, 39.
+ [^442:2]: VI,39.
 
 and we have already heard him censure certain Christian presbyters for their ''barbarous books containing the names and marvelous doings of demons." [^442:3] It therefore becomes evident that magicians attempt to avail themselves of the aid of demons, whether Celsus believes that they succeed in their attempt or not. 
 
- [^442:3]: VI, 40.
+ [^442:3]: VI,40.
 
 ### Origen ascribes magic to demons.
 
 Origen at any rate believes that magicians are aided by evil spirits, and for him demons became the paramount factor in magic, just as it is they who are worshiped in pagan temples as gods and who inspire the pagan oracles. [^442:4]
 
- [^442:4]: VII, 3 and 35
+ [^442:4]: VII,3 and 35
 
 Indeed, just as Celsus has kept calling the Christians sorcerers, so Origen is inclined to label all heathen religions, rites, and ceremonies as magic. He quotes the Psalmist as saying that "all the gods of the heathen are demons." [^442:5] 
 
@@ -190,11 +190,11 @@ Indeed, just as Celsus has kept calling the Christians sorcerers, so Origen is i
 
 > He states that the dedication of pagan temples, statues, and the like are accompanied by "curious magical incantations . . . performed by those who zealously serve the demons with magic arts." [^442:6] 
 
- [^442:6]: VII, 69.
+ [^442:6]: VII,69.
 
 > Divination in general, he believes, "proceeds rather from wicked demons than from anything of a better nature."  [^442:7] 
 
- [^442:7]: V, 42.
+ [^442:7]: V,42.
 
 He does not think of magic as a deception, he does not endeavor to expose its frauds, he accepts its marvels as facts, but declares that "magic and sorcery are produced by wicked spirits, held spellbound by elaborate incantations and yielding themselves to sorcerers." [^442:8] 
 
@@ -215,7 +215,7 @@ Origen also suggests that the natural properties of plants and animals are a fac
 
 > "He partakes of the essence of all the animals and plants that are under the control of nature, that he may appear to have been fashioned into a god, not only by the image-makers with the aid of profane mysteries and juggling tricks employed to invoke demons, but also by magicians and sorcerers ( μάγων καὶ φαρμακῶν; mágon kaí farmakón) and those demons who are bewitched by their incantations." [^443:2] 
 
- [^443:2]: V, 38.
+ [^443:2]: V,38.
 
 Another passage pointing in the same direction is Origen's description of 
 
@@ -223,25 +223,25 @@ Another passage pointing in the same direction is Origen's description of
 
 Thus although Origen lays the emphasis upon demons, we see that he admits most of the other customary elements in magic. 
 
- [^443:3]: VIII, 64.
+ [^443:3]: VIII,64.
 
 ### The Magi of Scripture were not different from other magicians.
 
 Origen does not, like Philo Judaeus, Apuleius and some Christian writers, distinguish two uses of the word magic,  one good and one evil. He does not differentiate between vulgar magic and malignant sorcery on the one hand and the lore of learned Magi of the east on the other hand. He simply says that the art of magic gets its name from the Magi and that from them its evil influence has been transmitted to other nations. [^444:1] 
 
- [^444:1]: VI, 80.
+ [^444:1]: VI,80.
 
 Celsus had ranked the Magi among divinely inspired nations but Origen objects to this. Yet he recognizes that the wise men of the east who followed the star of Bethlehem and came to worship the infant Christ were Magi. [^444:2] 
 
- [^444:2]: I, 58.
+ [^444:2]: I,58.
 
 But he seems to regard them as ordinary magicians, who were accustomed to invoke evil spirits. [^444:3] 
 
- [^444:3]: I, 60.
+ [^444:3]: I,60.
 
 He thinks that the coming of Christ dispelled the demons and hindered the Magi's spells and charms from working as usual. Trying to find the reason for this, they would note the new star in the sky. Origen will not admit that they could do all this by means of astrology, nor even that they were astrologers at all; he accuses Celsus of blundering in calling them Chaldeans or astrologers. [^444:4]
 
- [^444:4]: I, 58. The Magi had been confused with the Chaldeans several centuries before by Ctesias in his _Persica_. cap. 15; see D.F.M&uuml;nter, _Der Stern der Weisen: Untersuchungen &uuml;ber das Geburtsjahr Christi_, Kopenhagen (1827), p. 14.
+ [^444:4]: I,58. The Magi had been confused with the Chaldeans several centuries before by Ctesias in his _Persica_. cap. 15; see D.F.M&uuml;nter, _Der Stern der Weisen: Untersuchungen &uuml;ber das Geburtsjahr Christi_, Kopenhagen (1827), p. 14.
 
 Rather he thinks that they could find an explanation of the star in the prophecies of Balaam [^444:5] 
 
@@ -249,7 +249,7 @@ Rather he thinks that they could find an explanation of the star in the propheci
 
 which they possessed and which predicted, as Moses too records, [^444:6] 
 
- [^444:6]: Numbers, XXIV, 17. 
+ [^444:6]: Numbers, XXIV,17. 
 
 > "There shall arise a star out of Jacob, and a man (or, as in the King James' version, a scepter) shall rise up out of Israel." [^444:7] 
 
@@ -267,7 +267,7 @@ Origen seems to have been the first of the church fathers to state the number of
 
  [^445:2]: In Genesim Homilia XIV, 3, in PG, XII, 238.
 
-### Origen's Biblical commentaries,
+### Origen Biblical commentaries
 
 At this point indeed, we may well turn for a little while from the _Reply to Celsus_ to those Biblical commentaries of Origen where he discusses such Old Testament passages connected with magic as the stories of Balaam and of the witch of Endor or ventriloquist. The commentary of Origen upon the Book of Numbers is extant only in the Latin translation by Rufinus, who literally snatched it for posterity as a brand from the burning, for he did not refrain from this learned and literary labor, although as he plied his pen in Messina in 410 A. D. he could see the invading barbarians ravaging the fields and burning Reggio just across the narrow strait which separates Sicily from Italy. [^445:3] 
 
@@ -286,9 +286,9 @@ got from God whatever he wished." [^446:1]
 
  [^446:1]: W.H.Bennett, Balaam, in EB, 11th edition. 
 
-### Limitations to the power of Pharaoh's magicians.
+### Limitations to the power of Pharaoh magicians
 
-The magicians of Egypt, too, who withstood Moses and Aaron before Pharaoh, were able to turn rods into snakes and water into blood, feats which no man could accomplish by mere bodily strength. Indeed, because the king of Egypt knew that his magicians could do such things by a human art of words, he thought, at first at least, that Moses too was doing the same things not by the help of God but by the magic art. There was, however, a very serious limitation to the magicians' power. By the aid of demons they could turn good into evil but they could not repair the damage which they had done or restore the evil to good. The rod of Moses, on the other hand, not only devoured theirs but turned back from a snake into its original form, [^446:2] and it was necessary for Moses to pray to God in order to stay the other plagues. 
+The magicians of Egypt, too, who withstood Moses and Aaron before Pharaoh, were able to turn rods into snakes and water into blood, feats which no man could accomplish by mere bodily strength. Indeed, because the king of Egypt knew that his magicians could do such things by a human art of words, he thought, at first at least, that Moses too was doing the same things not by the help of God but by the magic art. There was, however, a very serious limitation to the magicians power. By the aid of demons they could turn good into evil but they could not repair the damage which they had done or restore the evil to good. The rod of Moses, on the other hand, not only devoured theirs but turned back from a snake into its original form, [^446:2] and it was necessary for Moses to pray to God in order to stay the other plagues. 
 
  [^446:2]: One cannot help wondering whether Pharaoh's magicians lost their rods for good as a result of this maneuver, but it is a point upon which the Scriptural narrative fails to enlighten us. 
 
@@ -327,7 +327,7 @@ Finally we may note that Origen sees the similarity be- tween the use of cauldro
 
  [^448:1]: In Homily XIV. 
 
-### The ventriloquist really invoked Samuel for Saul.
+### The ventriloquist really invoked Samuel for Saul
 
 In his commentary upon the First Book of Samuel, [^448:2] 
 
@@ -337,19 +337,19 @@ Origen takes the ground that when Saul consulted the witch or ventriloquist (ἔ
 
  [^448:3]: J.G.Frazer (1918), II, 522, note, however, says of I.Samuel, XXVIII, 12: "It seems that we must read, 'And when the woman saw Saul,' with six manuscripts of the Septuagint and some modern critics, instead of, 'And when the woman saw Samuel.' "
 
-### Christians less affected by magic than philosophers.
+### Christians less affected by magic than philosophers
 
 Origen disputes the statement of Celsus that philosophers are not affected by the magic arts by pointing out that in Moiragenes's _Life of Apolloniiis of Tyana_, who was himself both a philosopher and magician, it is affirmed that other philosophers were won over by his magic power "and resorted to him as a sorcerer." [^448:4] On the other hand Origen makes the counter-assertion that the followers of Christ "who live according to His gospel, using night and day continuously and becomingly the prescribed prayers, are not carried away either by magic or demons." 
 
  [^448:4]: VI, 41
 
-### Their superstitious methods against magic,
+### Their superstitious methods against magic
 
 If these "prescribed prayers" were set forms of words, they would seem not far removed in character from the incantations of the magicians which they were supposed to counteract. An even clearer example of preventive magic is seen in Origen's explanation that the practice of circumcision was a safeguard against some angel (sic) hostile to the Jewish race. [^449:1] 
 
  [^449:1]: V, 48.
 
-### Incantations.
+### Incantations
 
 If demons are for Origen of primary importance in magic, incantations run a close second, since it is chiefly through them that men are able to utilize the power of the demons. Some of the barbarians, Origen tells us, 
 
@@ -377,11 +377,11 @@ It is even possible for persons who are not true Christians to make use of the n
 
  [^450:2]: II, 49. 
 
-### The power of words.
+### The power of words
 
 Origen, however, does not try to justify these Hebrew and Christian formulae, adjurations, and exorcisms on the ground that they are simply prayers to God, who Himself then performs the cure or miracle without compulsion. Origen believes that there is power in the words themselves, as we have already heard him state in speaking of Balaam. This is seen from the fact that when translated into another language they lose their operative force, as those who are skilled in the use of incantations have noted. [^450:3] 
 
- [^450:3]: I, 25 ; V, 45. 
+ [^450:3]: I,25 ; V,45. 
 
 Thus not what is signified by the words, but the qualities and peculiarities of the words themselves, are potent for this or that effect. It seems strange that Origen should thus cite enchanters, when in the sentence just preceding he had spoken of "our Jesus, whose name has been manifestly seen to have driven out demons from souls and bodies. . . ." Was the divine name alone and not God the cause of the miracle? It may be added, however, that Origen denied that languages were of human origin. [^450:4] 
 
@@ -399,7 +399,7 @@ Later on in the work, in a passage which we have already cited, Origen waxed ind
 
 These last clauses make it clear that Jews and Christians were guilty both of incantations and magic, however much Origen may protest to the contrary. It can hardly be argued that Origen means to distinguish this "so-called magic" from the magic art which he condemns in other passages, for not only is it evident that the followers of Epicurus and Aristotle make no such distinction, but Origen himself in other passages ascribes the employment of such Hebrew names to ordinary magicians and declares that such invocations of God are "found in treatises on magic in many countries." [^451:1] 
 
- [^451:1]: IV, 33; I, 22, etc
+ [^451:1]: IV,33; I,22, etc
 
 Origen also states in his _Commentary upon Matthew_ [^451:2] that the Jews are regarded as adepts in adjuration of demons and that they employ adjurations in the Hebrew language drawn from the books of Solomon. Moreover, he continues in the present passage, 
 
@@ -412,7 +412,7 @@ Between such mystic theology and philosophy of names, the Gnostic diagram of the
 
  [^452:1]: See p. 366 in Chapter XV on VIII. 28. 
 
-### Celsus' theory of demons.
+### Celsus theory of demons
 
 From the names of God and angels, by uttering which such wonders may be performed, we turn to the spirits themselves. Celsus seems to think of demons as spiritual beings who act as intermediaries between the supreme Deity and the world of nature and human society. 
 
@@ -441,7 +441,7 @@ Celsus himself, however, seems as unwilling to accept this Egyptian view as he i
 
  [^453:3]: VII, 68.
 
-### Origen calls demons wicked.
+### Origen calls demons wicked
 
 Origen's reply to this question is that the demons are wicked spirits and concerned with magic and idolatry. He maintains that not only Christians "but almost all who acknowledge the existence of demons" regard them as evil spirits. [^453:4] His own attitude toward them is invariably one of hostility. The thirty-six spirits who, as the Egyptians believe, have charge of different parts of the human body, Origen spurns as: 
 
@@ -453,7 +453,7 @@ Origen's reply to this question is that the demons are wicked spirits and concer
 
 Really we probably have here to do with the astrological decans or sub-divisions of the signs of the zodiac into sections of ten degrees each. 
 
-### But believes in presiding angels.
+### But believes in presiding angels
 
 Yet Origen's notion of the spiritual world rather closely resembles that of Celsus, for he is ready to ascribe to angels or other good invisible beings much the same functions which Celsus attributed to demons. He does not, for example, dispute the theory that different parts of the earth and of nature are assigned to different spirits. Instead he "ventures to lay down some considerations of a profounder kind, conveying a mystical and secret view respecting the original distribution of the various quarters of the earth among different superintending spirits." [^453:6] He quotes the Septuagint version of Deuteronomy, 
 
@@ -501,7 +501,7 @@ He further declares on the authority of passages in the New Testament that to on
 
  [^455:2]: Matthew. XVIII, 10.
 
-### A law of spiritual gravitation.
+### A law of spiritual gravitation
 
 Origen advances a further theory concerning spirits, which may be described as a sort of law of spiritual gravitation. It is that when souls are pure and "not weighted down with sin as with a weight of lead," they ascend on high where other pure and ethereal bodies and spirits dwell, "leaving here below their grosser bodies along with their impurities." Polluted souls, on the contrary, have to stay close to earth where they wander about sepulchers as ghosts and apparitions. [^455:3] 
 
@@ -511,7 +511,7 @@ Origen therefore infers that pagan gods "who are attached for entire ages to par
 
  [^455:4]: V, 6-9. 
 
-### Attitude of Celsus toward astrology.
+### Attitude of Celsus toward astrology
 
 Both Celsus and Origen closely associate with the world of invisible spirits, whether these be angels or demons, the visible heavenly bodies, and thus lead us from magic, which Origen makes so dependent upon demons, to the kindred subject of astrology, the pseudo-science of the stars. Celsus had censured the Jews and by implication the Christians for worshiping heaven and the angels, and even apparitions produced by sorcery and enchantment, and yet at the same time neglecting what in his opinion formed the holiest and most powerful part of the heaven, namely, the fixed stars and the planets, "who prophesy to everyone so distinctly, through whom all productiveness results, the most conspicuous of supernal heralds, real heavenly angels." [^455:5] 
 
@@ -525,7 +525,7 @@ Origen also complains that Celsus regards as a divinely-inspired nation the Chal
 
  [^456:2]: VI, 80. 
 
-### Attitude of Origen toward astrology.
+### Attitude of Origen toward astrology
  
 Origen is opposed both to this art of casting horoscopes and determining the entire life of the individual from his nativity, and to the theory of the magnus annus, [^456:3] because he is convinced that to admit their truth is to annihilate freewill. 
 
@@ -575,7 +575,7 @@ Sometimes, however, Huet points out, Origen leaves it an open question whether t
 
  [^457:6]: "In prooemio libri prioris eiusdem Περὶ ἀρχῶν -Perí archón -  On the principles, num. 10".
 
-### Further discussion in his Commentary on Genesis.
+### Further discussion in his Commentary on Genesis
 
 In a fragment from Origen's Commentary on Genesis preserved by Eusebius we have a further discussion of the stars and astrology. [^457:7] 
 
@@ -591,7 +591,7 @@ The evil spirits have, however, taught men the art of astrology, but Origen beli
 
  [^458:2]: PG, XXI, 501-502. 
 
-### Problems of the waters above the firmament and of one or more heavens.
+### Problems of the waters above the firmament and of one or more heavens
 
 In explaining the Book of Genesis Origen said that celestial and infernal virtues were represented by the waters above and below the firmament respectively. This figurative interpretation gave offense to many later Christian writers, although some of them were ready to interpret the waters above as celestial virtues, but not to take the waters below as signifying evil spirits. [^458:3] Concerning the question of a plurality of heavens Origen says in the _Reply to Celsus_, 
 
@@ -599,9 +599,9 @@ In explaining the Book of Genesis Origen said that celestial and infernal virtue
 
 "The Scriptures which are current in the Churches of God do not speak of seven heavens or of any definite number at all, but they do appear to teach the existence of heavens, whether that means the spheres of those bodies which the Greeks call planets or something more mysterious." [^459:1] 
 
- [^459:1]: V, 21.
+ [^459:1]: V,21.
 
-### Augury, dreams, and prophecy.
+### Augury, dreams, and prophecy
 
 Of other pagan methods of divination than astrology Origen disapproved and classed them, as we have seen, as the work of demons. He was impressed by the weight of testimony to the validity of augury, [^459:2] 
 
@@ -623,7 +623,7 @@ Origen grants that all men desire to ascertain the future and argues that the Je
 
  [^460:2]: I, 33.
 
-### Animals and gems. 
+### Animals and gems 
 
 The allusions to natural science in the _Reply to Celsus_ are not numerous. There are a few passages where animals or gems are mentioned. The remarks concerning animals mention the usual favorites and embody familiar notions which we either have already met or shall meet again and again. Celsus speaks [^460:3] 
 
@@ -654,7 +654,7 @@ In another passage Origen again quotes Isaiah regarding the walls, foundations, 
 
  [^461:1]: Homily 18 on Numbers, Migne, PG, XII, 715.
 
-### Origen later accused of countenancing magic.
+### Origen later accused of countenancing magic
 
 Origen's belief that the stars were rational beings continued to be held by the sect called Origenists and also by the heretic Priscillian and his followers in the later fourth century. Priscillian, as we have seen, was accused of magic and executed in 385. But we are surprised to find Theophilus of Alexandria, who attacked some of Origen's views as heretical and persuaded Pope Anastasius to do the same, accusing Origen in a letter written in 405 and translated into Latin by Jerome, of having defended magic. [^461:2] Theophilus states that Origen has written in one of his treatises, 
 
